2003-04-26  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Makefile.am (libbicpl_la_LIBADD): 
	* tools/Makefile.am (LDADD): Remove $(BIC_LIBS), as it
	was not defined anywhere.  Ditto $(imageio_LIBS).

	* Makefile.am (libbicpl_la_LDFLAGS): Fix -version-info by
	incrementing "current" and "age", since interfaces were added in
	change of 2003-02-10.

	* configure.in: Set version to 1.4.1.

	* Documentation/Makefile.am (tex_sources): Add rules to
	build bicpl.ps.

	* tools/bicobj2vtk.c (MAX_ATTRIBUTES): Raise to 300.

2003-02-16  Jason Lerch		<jason@bic.mni.mcgill.ca>

	* added mni_bicpl.epm.header
	* bumped version to 1.4.0-1

2003-02-10  Jason Lerch		<jason@bic.mni.mcgill.ca>

	* added Deform directory, taking sources from
	/home/bic/david/Source/David/Deform/.
	* added deform.h and friends to Include directory
	* bumped version to 1.4.0

2003-01-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* configure.in: Set version to 1.3.10.

2003-01-25  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Tagged as bicpl-1_3_9.

	* NEWS: Update.

	* Makefile.am (libbicpl_la_LDFLAGS): Update -version-info to 1:1:0.

	* configure.in: Set version to 1.3.9.

2002-11-27  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Testing/Makefile.am: New.  Not all programs compile.

	* Images/rgb_io_ppm.c (input_rgb_file): Enable this code.

	* tools/bicobj2vtk.c: Handle LINES object type.

2002-09-05  Jason Lerch		<jason@bic.mni.mcgill.ca>

	* updated the NEWS file so that make dist works.

2002-05-15  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* Include/*.h: Remove rcsid strings from public headers.

2002-04-26  Steve ROBBINS  <stever@bic.mni.mcgill.ca>

	* tools/ParseArgv.c:
	* tools/ParseArgv.h: Remove.  These are now installed with
	MINC 1.0.

	* autogen.sh: Run libtoolize.

2001-12-21  Steve M. Robbins  <steve@nyongwa.montreal.qc.ca>

	* tools/bicobj2vtk.c: New.  Transform polygons into VTK
	data file.

	* tools/ParseArgv.c: